envs/prod/hello/ingress-hello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: bitcert-attest
  annotations:
    konghq.com/plugins: hello-ratelimit-0
spec:
  ingressClassName: kong
  rules:
  - host: hello.bitcert.test
    http:
      paths:
      - path: /hello/v1
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 8080
